--- a/drupal/sentence-builder/assets/css/style.css
+++ b/drupal/sentence-builder/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 body, html { font-size: 100%; padding: 0; margin: 0;}
 
@@ -236,6 +234,56 @@ input {
 input#partner {
   line-height: 36px;
 }
+
+@-webkit-keyframes demo {
+    0% {
+        background-color: white;
+        opacity:1;
+    }
+    10% {
+        background-color: #FFFACD;
+        opacity:1;
+    }
+    20% {
+        background-color: white;
+        opacity:1;
+    }
+    30% {
+        background-color: #FFFACD;
+        opacity:1;
+    }
+    40% {
+        background-color: white;
+        opacity:1;
+    }
+    50% {
+        background-color: #FFFACD;
+        opacity:1;
+    }
+    60% {
+        background-color: white;
+        opacity:1;
+    }
+    70% {
+        background-color: #FFFACD;
+        opacity:1;
+    }
+    80% {
+        background-color: white;
+        opacity:1;
+    }
+    100% {
+        background-color: white;
+        opacity:1;
+    }
+}
+    
+.demo {
+    -webkit-animation-name: demo;
+    -webkit-animation-duration: 4000ms;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-in-out;
+} 
 
 select {
   background:none;
