EEN-178 Sticky nav bug and improvement

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -119,6 +119,7 @@
                     {{ 'Not available'|t }}
                 {% endif %}
             </p>
+            <div id="navstop"></div>
         </div>
     </div>
     <hr/>
