--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -777,6 +777,7 @@ form[data-drupal-selector="opportunity-search-form"] {
             min-height: 35px;
             display: table-cell;
             vertical-align: middle;
+            height: 35px;
             
             @media (min-width: 640px) and (max-width:900px){
                 line-height: 1em;
