EEN-146: Fix Search opportunity by country on pagination and go back button

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -5,6 +5,9 @@
 {% if opportunity_type %}
     {% set params = params|merge({'opportunity_type': opportunity_type}) %}
 {% endif %}
+{% if country %}
+    {% set params = params|merge({'country': country}) %}
+{% endif %}
 
 <div class="content-heading">
     <h1>{{ 'Partnering Opportunities'|t }}</h1>
