--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -5,6 +5,9 @@
 {% if opportunity_type %}
     {% set params = params|merge({'opportunity_type': opportunity_type}) %}
 {% endif %}
+{% if country %}
+    {% set params = params|merge({'country': country}) %}
+{% endif %}
 
 {% if opportunity is not empty %}
     <div>
