--- a/drupal/themes/custom/een/scss/angular.scss
+++ b/drupal/themes/custom/een/scss/angular.scss
@@ -2,6 +2,11 @@
   display: none !important;
 }
 
+a[ng-click] {
+    cursor: pointer;
+    color: #2b8cc4;
+}
+
 .transp {
   opacity: 0.5 !important;
   filter: alpha(opacity=50);
