--- a/drupal/themes/custom/een/templates/pagination.html.twig
+++ b/drupal/themes/custom/een/templates/pagination.html.twig
@@ -5,7 +5,7 @@
     <!-- Previous page link -->
     {% if page > 1 %}
         <li class="previous" ng-show="!heading.searched">
-            <a id="pagination-previous" href="{{ url(route, {'page': page - 1}|merge(params)) }}" ng-click="prev()" pagination-link>
+            <a id="pagination-previous" href="{{ url(route, {'page': page - 1}|merge(params)) }}" ng-click="prev()">
                 {{ 'Previous'|t }} <span class="visuallyhidden">{{ 'page'|t }}</span>
                 <span class="page-numbers">{{ page - 1 }} {{ 'of'|t }} {{ pageTotal }}</span>
             </a>
@@ -14,22 +14,22 @@
 
     {% if page < pageTotal %}
         <li class="next" ng-show="!heading.searched">
-            <a id="pagination-next" href="{{ url(route, {'page': page + 1}|merge(params)) }}" ng-click="next()" pagination-link>
+            <a id="pagination-next" href="{{ url(route, {'page': page + 1}|merge(params)) }}" ng-click="next()">
                 {{ 'Next'|t }} <span class="visuallyhidden">{{ 'page'|t }}</span>
                 <span class="page-numbers">{{ page + 1 }} {{ 'of'|t }} {{ pageTotal }}</span>
             </a>
         </li>
     {% endif %}
 
-    <li class="previous" ng-show="heading.searched && heading.page > 1">
-        <a id="pagination-previous" href="" ng-click="prev()" pagination-link>
+    <li class="previous" ng-show="heading.searched && heading.page > 1" ng-cloak>
+        <a id="pagination-previous" ng-click="prev()">
             Previous <span class="visuallyhidden">page</span>
             <span class="page-numbers">{[{ heading.page - 1 }]} of {[{ heading.pageTotal }]}</span>
         </a>
     </li>
 
-    <li class="next" ng-show="heading.searched && heading.page < heading.pageTotal">
-        <a id="pagination-next" href="" ng-click="next()" pagination-link>
+    <li class="next" ng-show="heading.searched && heading.page < heading.pageTotal" ng-cloak>
+        <a id="pagination-next" ng-click="next()">
             Next <span class="visuallyhidden">page</span>
             <span class="page-numbers">{[{ heading.page + 1 }]} of {[{ heading.pageTotal }]}</span>
         </a>
