--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -26,21 +26,21 @@
 
         {% if results is not null %}
             {% if total > 0 %}
-                <div class="row" ng-show="heading.searched" ng-cloak ng-class="{ transp: heading.searching }">
-                    <h3 class="heading-xlarge results-list-heading">{[{ heading.total }]} <span class="font-xsmall"> <ng-pluralize count="heading.total"
+                <div class="row" ng-show="meta.searched" ng-cloak ng-class="{ transp: meta.searching }">
+                    <h3 class="heading-xlarge results-list-heading">{[{ data.total | number }]} <span class="font-xsmall"> <ng-pluralize count="data.total"
                         when="{'0': 'opportunities',
                                'one': 'opportunity',
                                'other': 'opportunities'}"></span></h3>
                 </div>
 
-                <div class="row" ng-show="!heading.searched">
+                <div class="row" ng-show="!meta.searched">
                     <h3 class="heading-xlarge results-list-heading">{{ total|number_format(0, '.', ',') }} <span class="font-xsmall">{{ 'opportunities '|t }}</span></h3>
                 </div>
 
                 <div class="results-list">
                     <p class="list-subtext">Get updates to this list  <a href="#" class="follow-list"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a> <a href="#" class="follow-list"><i class="fa fa-rss" aria-hidden="true"></i> RSS</a></p>
 
-                    <div class="row row-bordered" ng-show="heading.searched" ng-repeat="row in results" ng-cloak ng-class="{ transp: heading.searching }">
+                    <div class="row row-bordered" ng-show="meta.searched" ng-repeat="row in results" ng-cloak ng-class="{ transp: meta.searching }">
                         <h3 class="results-list-heading-item">
                             <a ng-href="/opportunities/{[{row.id}]}" id="opportunity-link" ng-bind-html="row.title | unsafe">
                                 {[{ row.title }]}
@@ -60,7 +60,7 @@
 
                     {% for row in results %}
 
-                        <div class="row row-bordered" ng-show="!heading.searched" ng-class="{ transp: heading.paging || heading.searching }">
+                        <div class="row row-bordered" ng-show="!meta.searched" ng-class="{ transp: meta.paging || meta.searching }">
                             <h3 class="results-list-heading-item">
                                 <a href="{{ url('opportunities.details', params|merge({'profileId': row.id})) }}" id="opportunity-link">
                                     {{ row.title|raw }}
