--- a/drupal/themes/custom/een/templates/pagination.html.twig
+++ b/drupal/themes/custom/een/templates/pagination.html.twig
@@ -5,7 +5,7 @@
     <!-- Previous page link -->
     {% if page > 1 %}
         <li class="previous" ng-show="!meta.searched">
-            <a id="pagination-previous" href="{{ url(route, {'page': page - 1}|merge(params)) }}" ng-click="prev()">
+            <a id="pagination-previous" href="{{ url(route, {'page': page - 1}|merge(params)) }}" ng-click="prev($event)">
                 {{ 'Previous'|t }} <span class="visuallyhidden">{{ 'page'|t }}</span>
                 <span class="page-numbers">{{ page - 1 }} {{ 'of'|t }} {{ pageTotal }}</span>
             </a>
@@ -14,7 +14,7 @@
 
     {% if page < pageTotal %}
         <li class="next" ng-show="!meta.searched">
-            <a id="pagination-next" href="{{ url(route, {'page': page + 1}|merge(params)) }}" ng-click="next()">
+            <a id="pagination-next" href="{{ url(route, {'page': page + 1}|merge(params)) }}" ng-click="next($event)">
                 {{ 'Next'|t }} <span class="visuallyhidden">{{ 'page'|t }}</span>
                 <span class="page-numbers">{{ page + 1 }} {{ 'of'|t }} {{ pageTotal }}</span>
             </a>
@@ -22,14 +22,14 @@
     {% endif %}
 
     <li class="previous" ng-show="meta.searched && data.page > 1" ng-cloak>
-        <a id="pagination-previous" ng-click="prev()">
+        <a id="pagination-previous" ng-click="prev($event)">
             Previous <span class="visuallyhidden">page</span>
             <span class="page-numbers">{[{ data.page - 1 }]} of {[{ data.pageTotal }]}</span>
         </a>
     </li>
 
     <li class="next" ng-show="meta.searched && data.page < data.pageTotal" ng-cloak>
-        <a id="pagination-next" ng-click="next()">
+        <a id="pagination-next" ng-click="next($event)">
             Next <span class="visuallyhidden">page</span>
             <span class="page-numbers">{[{ data.page + 1 }]} of {[{ data.pageTotal }]}</span>
         </a>
