--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -1,25 +1,23 @@
 <div class="grid-row">
-    <div class="column-one-half">
+    <div class="column-two-thirds">
         
         <h1 class="heading-large">Companies house search</h1>
-        <form action="{{ form['#action'] }}" method="POST" class="form-opportunities">
+        <form action="{{ form['#action'] }}" method="POST" class="form-companies-house-search">
             <div class="form-section">
-                {{ form.description }}
+                {{ form.company_name }} {{ form.search }} 
+                
+                <div class="form-group" id="ch_search-results">
+                    <ul class="companies-house-list"></ul>
+                </div>
             </div>
+            
+            <div class="form-section">
+                {{ form.no_company_number }}
+            </div>
+            
 
             <div class="form-section">
                 {{ form.company_number }}
-            </div>
-            
-            <div class="form-section">
-                {{ form.company_postcode }}
-            </div>
-
-            {{ form.actions }}
-            
-            
-            <div class="form-group" id="ch_search-results">
-                <ul class="companies-house-list"></ul>
             </div>
         </form>
         
