--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -185,7 +185,8 @@ form {
     :-ms-input-placeholder {   font-size:0.9em; font-style: italic;  }
 }
 
-.form-opportunities {
+
+form {
     .form-label {
         @extend .font-small;
         font-weight: bold;
@@ -199,6 +200,27 @@ form {
             text-decoration: underline;
         }
     }
+    
+    .form-control {
+        width:100%;
+        border-color: #9B9B9B;
+        border-width: 1px;
+    }
+    .error .form-control {
+        border: 4px solid #b10e1e;
+    }
+    .form-item {
+        clear:both;
+    }
+
+    .form-item.error + .form-item {
+       padding-left:15px;
+    }
+}
+
+
+.form-opportunities {
+    
     div[id$="--description"] {
         border-left:6px solid #DEE0E2;
         padding-left: 14px;
@@ -215,23 +237,6 @@ form {
             margin:14px 0 0 0;
         }
     }
-
-    .form-control {
-        width:100%;
-        border-color: #9B9B9B;
-        border-width: 1px;
-    }
-    .error .form-control {
-        border: 4px solid #b10e1e;
-    }
-    .form-item {
-        clear:both;
-    }
-
-    .form-item.error + .form-item {
-       padding-left:15px;
-    }
-
     #edit-email {
         width:70%;
     }
@@ -812,6 +817,53 @@ form[data-drupal-selector="opportunity-search-form"] {
         }
     }
 }
+
+.form-companies-house-search {
+    .companies-house-list {
+        border: 1px solid #9B9B9B;
+        display:none;
+        width:70%;
+        max-height: 185px;
+        overflow: auto;
+
+        li { 
+            border-top: 1px solid #9B9B9B;
+            padding: 6px;
+            font-size: 14px;
+            border-bottom:none;
+            
+            a {
+                display:block;
+            }
+        }
+        li:first-of-type {
+            border: none;
+        }
+    }
+    .ch_search {
+        float:left;
+        width:60%;
+        margin-right:7px;
+    }
+    .form-item-company-name {
+        margin-bottom:7px;
+    }
+    
+    #ch-search-trigger {
+        border: 2px solid $light-blue;
+        padding: 8px;
+        top: -3px;
+        position: relative;
+        border-radius: 4px;
+        color: $light-blue;
+        font-size: 14px;
+        cursor: pointer;
+        font-weight: bold;
+        top: -8px;
+        width:auto; 
+    }
+}
+
 
 #footer .footer-meta {
     padding-top:30px;
