--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -1,24 +1,50 @@
 <div class="grid-row">
-    <div class="column-two-thirds">
-        
+    <div class="column-full-width">
         <h1 class="heading-large">Companies house search</h1>
+        <div class="form-heading">
+            <h1 class="heading-large">Thank you for applying for this project.</h1>
+            <p>To complete your project application please create an account with EEN to take advantage
+ of some other great benefits to help grow your business</p>
+        </div>
+    </div>    
+        <br /><br /><br />
+    <div class="column-two-thirds">
         <form action="{{ form['#action'] }}" method="POST" class="form-companies-house-search">
             <div class="form-section">
-                {{ form.company_name }} {{ form.search }} 
-                
-                <div class="form-group" id="ch_search-results">
-                    <ul class="companies-house-list"></ul>
-                </div>
+                {{ form.firstname }}
             </div>
             
+            <div class="form-section">
+                {{ form.lastname }}
+            </div>
+
+            <div class="form-section">
+                {{ form.email }}
+            </div>
+
+            <div class="form-section">
+                {{ form.phone }}
+            </div>
+            
+            <div class="form-section">
+                {{ form.newsletter }}
+            </div>
+            
+            <div class="form-section">
+                {{ form.testradio }}
+            </div>
+
             <div class="form-section">
                 {{ form.no_company_number }}
             </div>
             
-
             <div class="form-section">
-                {{ form.company_number }}
+                {{ form.company_name }} {{ form.search }} 
+                <div class="form-group" id="ch_search-results">
+                    <ul class="companies-house-list"></ul>
+                </div>
             </div>
+
         </form>
         
     </div>
