--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -45,6 +45,13 @@
                 </div>
             </div>
 
+            <div class="form-section">
+                {{ form.no_company_number }}
+            </div>
+
+            <div class="form-section">
+                {{ form.actions }}
+            </div>
         </form>
         
     </div>
