EEN-216: Adding email verification endpoint and call to api + update templates

--- a/drupal/themes/custom/een/templates/block/status-messages.html.twig
+++ b/drupal/themes/custom/een/templates/block/status-messages.html.twig
@@ -23,7 +23,7 @@
 #}
 <div class="row status-messages">
     {% for type, messages in message_list %}
-        <div class="error-summary" role="contentinfo"
+        <div class="{{ type }}-summary" role="contentinfo"
              aria-label="{{ status_headings[type] }}"{{ attributes|without('role', 'aria-label') }}>
 
             {% if status_headings[type] %}
