--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -102,6 +102,12 @@ a {
     transform: translateZ(0);
 }
 
+.status-summary {
+    border: 4px solid #27931f;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 15px 10px;
+}
 
 .contents-list {
 
