--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -1,15 +1,16 @@
 <div class="grid-row">
-    <div class="column-full-width">
-        <h1 class="heading-large">Companies house search</h1>
+    <div class="column-full">
         <div class="form-heading">
             <h1 class="heading-large">Thank you for applying for this project.</h1>
             <p>To complete your project application please create an account with EEN to take advantage
  of some other great benefits to help grow your business</p>
         </div>
     </div>    
-        <br /><br /><br />
+        
     <div class="column-two-thirds">
         <form action="{{ form['#action'] }}" method="POST" class="form-companies-house-search">
+            <p class="heading-medium step">Step 1 of 3</p>
+            <h2 class="heading-large">About you</h2>
             <div class="form-section">
                 {{ form.firstname }}
             </div>
@@ -31,7 +32,7 @@
             </div>
             
             <div class="form-section">
-                {{ form.testradio }}
+                {{ form.actions }}
             </div>
 
             <div class="form-section">
@@ -49,9 +50,7 @@
                 {{ form.no_company_number }}
             </div>
 
-            <div class="form-section">
-                {{ form.actions }}
-            </div>
+            
         </form>
         
     </div>
