--- a/drupal/themes/custom/een/scss/variables.scss
+++ b/drupal/themes/custom/een/scss/variables.scss
@@ -8,3 +8,6 @@ $label-outline-color-focus: #ffbf47;
 //Pagination
 $previous-next-navigation-hover_colour: #f8f8f8;
 $previous-next-navigation-active_colour: #dee0e2;
+
+// Focus
+$focus: #b9e88b;
